fix z-index

--- a/src/components/projects-grid/style.scss
+++ b/src/components/projects-grid/style.scss
@@ -7,11 +7,11 @@
   margin-inline: auto;
 
   &__cell {
-    // position: relative;
-    // display: grid;
-    // place-items: center;
-    // grid-column: span 1;
-    // grid-row: span 1;
+    position: relative;
+    display: grid;
+    place-items: center;
+    grid-column: span 1;
+    grid-row: span 1;
 
     & > img {
       background-repeat: no-repeat;
@@ -22,10 +22,9 @@
 
     & > span {
       text-align: center;
-      // position: absolute;
+      position: absolute;
       left: 0;
       right: 0;
-      margin-top: -100%;
 
       & > .p {
         -webkit-text-stroke-width: 1px;
