--- a/src/components/projects-modal/style.scss
+++ b/src/components/projects-modal/style.scss
@@ -1,12 +1,11 @@
 .projectsModal {
   width: fit-content;
+  position: absolute;
+  z-index: 999;
   max-width: 650px;
   padding: $space-sm;
   box-shadow: 0px 0px 10px var(--black);
   @include fade-in;
-  // animation-name: fade-in;
-  // animation-duration: 0.5s;
-  // animation-timing-function: ease-in-out;
   background-color: var(--background-color);
   color: var(--color);
   border: none;
